--- a/_layouts/layout.html
+++ b/_layouts/layout.html
@@ -1,13 +1,14 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
+<!DOCTYPE html>
+<html lang="ja">
   <head>
-    <meta content="en-au" http-equiv="Content-Language" />
-    <meta content="text/html; charset=utf-8" http-equiv="Content-Type" />
+    <meta charset="utf-8" />
+    <title>{{ page.title }}</title>
+    <meta name="keywords" content="" />
+    <meta name="description" content="" />
     <link href="/rss.xml" type="application/rss+xml" rel="alternate" title="Blog Feed" />
     <link href="/atom.xml" type="application/atom+xml" rel="alternate" title="Blog Feed" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
-    <title>{{ page.title }}</title>
     <link rel="stylesheet" type="text/css" href="/css/style.css" />
     <link rel="shortcut icon" href="/img/favicon.ico" />
   </head>
@@ -15,7 +16,7 @@
     <div id="container">
       <div id="side">
         <a href="/" id="home" title="home" alt="home"><img src="/img/logo.png" alt="Site Name" /></a>
-        <div id="hometext"><a href="/" >えちょのざんがい</a></div>
+        <div id="hometext"><a href="/" >Site Name</a></div>
         <div class="section">
           <ul>
             <li><a href="/about.html">about</a></li>
@@ -26,7 +27,6 @@
       <div id="content">
         {{content}}
       </div>
-
     </div>
   </body>
 </html>
