--- a/old/dot-sakura/base.tmpl
+++ b/old/dot-sakura/base.tmpl
@@ -62,7 +62,7 @@
                       このサイトのバナー
                     <br />
                     <span class="vz12px">
-                      　　バナーURLは、http://www.nanican.net/dot-sakura/images/banner.pngです。<br />
+                      　　バナーURLは、http://ekicyou.github.io/old/dot-sakura/images/banner.pngです。<br />
                       　　LinkFree。連絡は特に必要ありません、伝言板くらいで結構です（笑）<br />
                     </span>
                     <br />
