--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -19,7 +19,7 @@ layout: layout
   <div class="clear">&nbsp;</div>
 </div>
 
-
+{{ page }}
 {% if page.comments %}
 <!-- START: Livefyre Embed -->
 <div id="livefyre-comments"></div>
