--- a/_layouts/layout.html
+++ b/_layouts/layout.html
@@ -16,7 +16,7 @@
     <div id="container">
       <div id="side">
         <a href="/" id="home" title="home" alt="home"><img src="/img/logo.png" alt="Site Name" /></a>
-        <div id="hometext"><a href="/" >Site Name</a></div>
+        <div id="hometext"><a href="/" >えちょの残骸</a></div>
         <div class="section">
           <ul>
             <li><a href="/about.html">about</a></li>
@@ -28,5 +28,6 @@
         {{content}}
       </div>
     </div>
+    <img id="ruins" src="/img/ruins.jpg" />
   </body>
 </html>
