--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,9 @@
 
 body
 {
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+
     writing-mode: tb-rl; /* IE独自仕様 */
     writing-mode: vertical-rl;
     -moz-writing-mode: vertical-rl;
@@ -14,8 +17,6 @@ body
 
     font-family:'Lucida Grande','Hiragino Kaku Gothic ProN', Meiryo, sans-serif;
     margin: 0px;
-    min-width: 920px;
-    width: expression(document.body.clientWidth < 922? "920px" : "auto");
     background-image:url("/img/ruins.jpg");
     background-repeat: no-repeat;
     background-attachment: scroll;
@@ -68,18 +69,18 @@ li
 
 #container
 {
-    position: relative;
+    margin: 4px;
     top: 0px;
     right: 0px;
 }
 
 #side
 {
-    position: absolute;
+    position: page;
     left: 0px;
     bottom: 4px;
     color: #CCCCCC;
-    margin-bottom:2px;
+    margin:0px;
 }
 #side .section
 {
@@ -110,7 +111,7 @@ li
 
 #content
 {
-    width:auto;
+    max-height: 640px;
 }
 
 img
