--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,28 @@
+/* CSS設定 */
+
 body
 {
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+
+    writing-mode: tb-rl; /* IE独自仕様 */
+    writing-mode: vertical-rl;
+    -moz-writing-mode: vertical-rl;
+    -o-writing-mode: vertical-rl;
+    -webkit-writing-mode: vertical-rl;
+    -webkit-text-combine: horizontal;
+    text-combine-horizontal: digits 2;
+    -ms-text-combine-horizontal: digits 2;
+    -webkit-text-combine-horizontal: digits 2;
+
     font-family:'Lucida Grande','Hiragino Kaku Gothic ProN', Meiryo, sans-serif;
-    margin-left:auto;
-    margin-right: auto;
-    width:1100px;
+    margin: 0px;
+    background-image:url("/img/ruins.jpg");
+    background-repeat: no-repeat;
+    background-attachment: scroll;
+    background-position: left bottom;
 }
+
 h1,h2,h3,h4,h5,h6
 {
     font-weight: lighter;
@@ -48,16 +66,21 @@ li
     margin-left:10px;
     list-style-type:circle;
 }
-#hometext a { font-size: 2em; margin-left: 5px; margin-right:10px; display: none; color: #41B1E1; font-weight: normal;  }
-#home:hover
+
+#container
 {
-    background:none;
+    margin: 4px;
+    top: 0px;
+    right: 0px;
 }
+
 #side
 {
-    float:right;
-    color: #41b1e1;
-    margin-left:50px;
+    position: page;
+    left: 0px;
+    bottom: 4px;
+    color: #CCCCCC;
+    margin:0px;
 }
 #side .section
 {
@@ -69,10 +92,28 @@ li
 {
     font-size:2em;
 }
+
+#hometext a {
+    font-size: 2em;
+    display: inline;
+    color: #CCCCCC;
+    font-weight: normal;
+}
+
+
+
+#pasta
+{
+
+
+}
+
+
 #content
 {
-    width:auto;
+    max-height: 42em;
 }
+
 img
 {
   width: auto !important;
@@ -96,19 +137,4 @@ img
 .idea h1, .entry h1
 {
     margin-bottom: 5px;
-}
-
-
-/* min-device-width: 800px instead? */
-@media screen and (max-width:900px)
-{
-    body { width:auto; margin:10px; }
-    #content { width : 100%; }
-    #side { float:none; width:100%; margin-left:0px; }
-    #side .section { margin-top:0; margin-right: 30px; }
-    #side .section ul { font-size:1.2em; padding:0px; margin:5px; }
-    #side li { display: inline; margin-left:3px; margin-right: 3px; font-weight: normal; }
-    #home { display: none;  }
-    #hometext a { display: inline;  }
-    h1 { margin-top: -0px;}
 }
