--- a/css/style.css
+++ b/css/style.css
@@ -156,7 +156,7 @@ img
 }
 #livefyre-comments div.fyre-listener-avatars
 {
-    height: 50px important!;
+    height: 50px;
 }
 
 div.fyre-comment-stream
