--- a/css/style.css
+++ b/css/style.css
@@ -159,7 +159,9 @@ img
     height: 50px;
 }
 
-div.fyre-comment-stream
+div.fyre-stream-content
 {
+    max-height: 420px;
+    overflow-y: scroll;
 }
 
