--- a/css/style.css
+++ b/css/style.css
@@ -165,3 +165,13 @@ div.fyre-stream-content
     overflow-y: scroll;
 }
 
+
+div.fyre-hovercard
+{
+    writing-mode: lr-tb; /* IE独自仕様 */
+    writing-mode: horizontal-tb;
+    -moz-writing-mode: vhorizontal-tb;
+    -o-writing-mode: horizontal-tb;
+    -webkit-writing-mode: horizontal-tb;
+    -webkit-text-combine: horizontal-tb;
+}
