--- a/_layouts/layout.html
+++ b/_layouts/layout.html
@@ -37,6 +37,7 @@
   })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
   ga('create', 'UA-9077216-5', 'auto');
+  ga('require', 'displayfeatures');
   ga('send', 'pageview');
 
 </script>
