--- a/css/style.css
+++ b/css/style.css
@@ -168,3 +168,21 @@ div.fyre-hovercard
     -webkit-writing-mode: horizontal-tb;
     -webkit-text-combine: horizontal-tb;
 }
+
+
+/* prettify.js */
+pre.prettyprint
+{
+    writing-mode: lr-tb; /* IE独自仕様 */
+    writing-mode: horizontal-tb;
+    -moz-writing-mode: vhorizontal-tb;
+    -o-writing-mode: horizontal-tb;
+    -webkit-writing-mode: horizontal-tb;
+    -webkit-text-combine: horizontal-tb;
+    width: 38em;
+}
+
+pre.prettyprint li
+{
+    list-style-type: decimal;
+}
