--- a/css/style.css
+++ b/css/style.css
@@ -16,6 +16,9 @@ body
     -webkit-text-combine-horizontal: digits 2;
 
     font-family:'Lucida Grande','Hiragino Kaku Gothic ProN', Meiryo, sans-serif;
+/*
+    font-family:Times New Roman , "游明朝", YuMincho, "ヒラギノ明朝 ProN W3", Hiragino Mincho ProN , "MSP明朝","MS PMincho","MS 明朝",serif;
+*/
     margin: 0px;
     background-image:url("/img/ruins.jpg");
     background-repeat: no-repeat;
