--- a/old/web-sakura/areka/ballon.css
+++ b/old/web-sakura/areka/ballon.css
@@ -51,7 +51,7 @@ div.ballon{
   -webkit-transition-duration: 0.2s;
   -webkit-transition-timing-function: ease;
 
-  transition-property: opacity, max-height, -webkit-transform;
+  transition-property: opacity, max-height, transform;
   transition-duration: 0.2s;
   transition-timing-function: ease;
 
@@ -61,14 +61,14 @@ div.ballon{
 div.ballon.sakura{
   margin-left:   1px;
   margin-right: 34px;
-  transform-origin: 150% 10px;
   -webkit-transform-origin: 150% 10px;
+  transform-origin: 150% 10px;
 }
 div.ballon.kero{
   margin-left:  32px;
   margin-right:  3px;
-  transform-origin: 50% 10px;
   -webkit-transform-origin: 50% 10px;
+  transform-origin: 50% 10px;
 }
 
 div.face{
