--- a/old/web-sakura/areka/ballon.css
+++ b/old/web-sakura/areka/ballon.css
@@ -31,13 +31,14 @@ div.ballon{
 
 
 
-  border-radius:         8px;
   -webkit-border-radius: 8px;
   -moz-border-radius:    8px;
+  border-radius:         8px;
 
-  box-shadow:         2px 2px 2px #888;
   -webkit-box-shadow: 2px 2px 2px #888;
   -moz-box-shadow:    2px 2px 2px #888;
+  box-shadow:         2px 2px 2px rgba(0,0,0,0.4);
+
 /*
   font-family:"ＭＳ Ｐゴシック",Osaka;
   font-size: 9pt;
