--- a/css/style.css
+++ b/css/style.css
@@ -5,15 +5,19 @@ body
     -moz-box-sizing: border-box;
     box-sizing: border-box;
 
-    writing-mode: tb-rl; /* IE独自仕様 */
+    -ms-writing-mode: tb-rl;            /* IE用　*/
+    -webkit-writing-mode: vertical-rl;  /* chrome用　*/
+    -o-writing-mode: vertical-rl;       /* opera用　*/
     writing-mode: vertical-rl;
-    -moz-writing-mode: vertical-rl;
-    -o-writing-mode: vertical-rl;
-    -webkit-writing-mode: vertical-rl;
-    -webkit-text-combine: horizontal;
-    text-combine-horizontal: digits 2;
-    -ms-text-combine-horizontal: digits 2;
+
+
+    /* 縦中横 */
+    -webkit-text-combine: horizontal-tb;
     -webkit-text-combine-horizontal: digits 2;
+    -ms-text-combine-horizontal: digits 2;
+    text-combine-upright: digits 2;
+    text-combine-horizontal: digits 2;
+
 
     font-family:'Lucida Grande','Hiragino Kaku Gothic ProN', Meiryo, sans-serif;
     margin: 0px;
