--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -9,7 +9,7 @@ layout: layout
 
     {% if forloop.first and post.layout == "post" %}
       <h1><a href="{{ post.url }}">{{ post.title }}</a></h1>
-      <div class="postdate">{{ post.date | date: "%e %B, %Y"  }}
+      <div class="postdate">{{ post.date | date: "%Y年%m月%d日" }}
         <ul>
         {% for tag in post.tags %}
           <li><a href="/tag/{{ tag }}">{{ tag }}</a></li>
@@ -22,7 +22,7 @@ layout: layout
 
     {% else %}
       <h2><a class="postlink" href="{{ post.url }}">{{ post.title }}</a></h2>
-      <div class="postdate">{{ post.date | date: "%e %B, %Y"  }}
+      <div class="postdate">{{ post.date | date: "%Y年%m月%d日" }}
         <ul>
         {% for tag in post.tags %}
           <li><a href="/tag/{{ tag }}">{{ tag }}</a></li>
@@ -42,7 +42,7 @@ layout: layout
 <ul class="postArchive">
 {% for post in site.posts offset:5 %}
   <li>
-    <span class="olderpostdate"> {{ post.date | date: "%d %b"  }} </span>
+    <span class="olderpostdate"> {{ post.date | date: "%Y年%m月%d日" }} </span>
     <a class="postlink" href="{{ post.url }}">{{ post.title }}</a>
   </li>
 {% endfor %}
