--- a/_layouts/layout.html
+++ b/_layouts/layout.html
@@ -9,6 +9,9 @@
     <link href="/atom.xml" type="application/atom+xml" rel="alternate" title="Blog Feed" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
+
+    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.1.0/styles/default.min.css">
+    <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.1.0/highlight.min.js"></script>
     <link rel="stylesheet" type="text/css" href="/css/style.css" />
     <link rel="shortcut icon" href="/img/favicon.ico" />
     <script src="http://ajax.aspnetcdn.com/ajax/jQuery/jquery-2.1.1.min.js"></script>
@@ -41,5 +44,6 @@
   ga('send', 'pageview');
 
 </script>
+<script>hljs.initHighlightingOnLoad();</script>
   </body>
 </html>
