--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -5,11 +5,11 @@ layout: layout
 <div class="entry-container">
   <div class='entry'>
     <h1> {{page.title}} </h1>
-    <span class="postdate">{{ page.date | date: "%Y年%m月%d日" }}
+    <div class="postdate">{{ page.date | date: "%Y年%m月%d日" }}
       {% for tag in page.tags %}
         <li><a href="/tag/{{ tag }}">{{ tag }}</a></li>
       {% endfor %}
-    </span>
+    </div>
     {{ content }}
   </div>
 </div>
