--- a/css/style.css
+++ b/css/style.css
@@ -5,18 +5,20 @@ body
     -moz-box-sizing: border-box;
     box-sizing: border-box;
 
-    -ms-writing-mode: tb-rl;            /* IE用　*/
-    -webkit-writing-mode: vertical-rl;  /* chrome用　*/
-    -o-writing-mode: vertical-rl;       /* opera用　*/
-    writing-mode: vertical-rl;
-
+    /* 縦書 */
+    writing-mode: vertical-rl;          /* css3 */
+    -ms-writing-mode: tb-rl;            /* ～IE11 */
 
     /* 縦中横 */
+    text-combine-upright: digits 2;         /* css3 draft */
+    -ms-text-combine-horizontal: digits 2;  /* IE11.edge */
+    /* edge以外では現在制御できていない */
     -webkit-text-combine: horizontal-tb;
     -webkit-text-combine-horizontal: digits 2;
-    -ms-text-combine-horizontal: digits 2;
-    text-combine-upright: digits 2;
-    text-combine-horizontal: digits 2;
+
+
+
+
 
 
     font-family:'Lucida Grande','Hiragino Kaku Gothic ProN', Meiryo, sans-serif;
@@ -31,6 +33,8 @@ h1,h2,h3,h4,h5,h6
 {
     font-weight: lighter;
     margin-bottom:0px;
+    margin-left:  0.2em;
+    margin-right: 0.2em;
     color:#9f6f55;
 }
 h1
@@ -63,11 +67,11 @@ li
 }
 .entry ul, .idea ul
 {
-    margin-left:10px;
+    margin-top:10px;
 }
 .entry li, .idea li , .latest li
 {
-    margin-left:10px;
+    margin-top:10px;
     list-style-type:circle;
 }
 
@@ -172,7 +176,7 @@ img
 
 .idea h1, .entry h1
 {
-    margin-left: 0.2em;
+    margin-top: 0em;
 }
 
 div.idea, div.entry
