--- a/_includes/giscus_comments.html
+++ b/_includes/giscus_comments.html
@@ -3,7 +3,7 @@
   <div id="giscus_thread"></div>
   <script src="https://giscus.app/client.js" data-repo="ekicyou/ekicyou.github.io"
   data-repo-id="MDEwOlJlcG9zaXRvcnk2OTMzMzcz" data-category="Announcements" data-category-id="DIC_kwDOAGnLfc4CzVb5"
-  data-mapping="pathname" data-strict="0" data-reactions-enabled="1" data-emit-metadata="0" data-input-position="top"
+  data-mapping="pathname" data-strict="0" data-reactions-enabled="1" data-emit-metadata="0" data-input-position="bottom"
   data-theme="preferred_color_scheme" data-lang="ja" data-loading="lazy" crossorigin="anonymous" async>
   </script>
 {%- endif -%}
